--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!doctype html>
 <html>
     <head>
-        <title>Curso Javascript Completo 2018</title>
+        <title>Valorant</title>
         <meta charset="utf-8">
-        
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-theme.css" rel="stylesheet">
-        <link href="CSS/mainStyle.css" rel="stylesheet">>
+        <meta name="author" content="Douglas Miller Fernandes">
+        <meta name="description" content="Teste GX2 Valorant">
+        <meta name="keywords" content="Primeiro Teste GX2">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="CSS/mainStyle.css" rel="stylesheet">
         <script src="JS/main.js"></script>
 
         <script>
-
-
-
         </script>
 
     </head>
 
 
     <body>
-        <h1>Logica de Programacao JS</h1>
+        <h1>Valorant</h1>
+
+
+
+
 
         <script>
-
-
-
         </script>
-
     </body>
 
 
