Header Main page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,53 @@
 
 
     <body>
-        <h1>Valorant</h1>
+        <header class="header-bg">
+            <div class="header-top">
+                <div>
+                    <img src="images/Logo.svg">
+                </div>
+
+                <div>
+                    <nav class="header-nav">
+                        <ul>
+                            <li>Agentes</li>
+                            <li>Mapas</li>
+                            <li>Arsenal</li>
+                            <li>Download</li>
+                            <li>Suporte</li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div>
+                    <button class="btn">Jogue Agora</button>
+                </div>
+
+            </div>
+
+        </header>
+
+        <main class="main">
+            <div>
+                <section class="agents-bg">
+                    <div class="agents-container">
+                        <div class="agents-tittle">
+                            <p>Agentes</p>
+                        </div>
+
+                        <div class="agents-cards"> 
+
+                        </div>
+                    </div>
+                </section>
+            </div>
+            
+
+        </main>
+
+        <footer>
+
+        </footer>
 
 
 
@@ -28,6 +74,7 @@
 
         <script>
         </script>
+
     </body>
 
 
