Esboco Geral parte 2

--- a/index.html
+++ b/index.html
@@ -71,23 +71,47 @@
             </section>
 
             <section class="weapons-bg">
-                <div class="weapons-container">
+                <div class="weapons-header">
+                    <div>
+                    <h2 class="tittle">Escolha Sua Arma</h2>
+                    </div>
+                    <div class="weapons-img">
+                        <img src="images/Grupo 511.svg">
+                    </div>
+                </div>
 
-                    <h2>Escolha Sua Arma</h2>
+                <div class="weapons-container">
                     <div class="weapons-left">
-                        <h4>Arma Primaria</h4>
-                        <img src="images/Phantom.png">
-                        <h4>Arma Secundaria</h4>
-                        <img src="images/Classic.png">
-                        <h4>Arma Branca</h4>
-                        <img src="images/771c7d8cfc12ad01d9e6c2eee17594c6-removebg-preview.png">
+                        <h4 class="weapon-tittle">Arma primaria</h4>
+                        <div class="weapons-card">
+                            <img class="arrow-left" src="images/Caminho 255.svg">
+                            <div class="weapons-border">
+                            <img class="weapons-img" src="#">
+                            </div>
+                            <img class="arrow-right" src="images/Caminho 256.svg">
+                        </div>
+                        <h4 class="weapon-tittle">Arma secundaria</h4>
+                        <div class="weapons-card">
+                            <img class="arrow-left" src="images/Caminho 255.svg">
+                            <div class="weapons-border">
+                            <img class="weapons-img" src="#">
+                            </div>
+                            <img class="arrow-right" src="images/Caminho 256.svg">
+                        </div>
+                        <h4 class="weapon-tittle">Arma branca</h4>
+                        <div class="weapons-card">
+                            <img class="arrow-left" src="images/Caminho 255.svg">
+                            <div class="weapons-border">
+                            <img class="weapons-img" src="#">
+                            </div>
+                            <img class="arrow-right" src="images/Caminho 256.svg">
+                        </div>
                     </div>
 
                     <div class="weapons-right">
                         <img src="images/V_AGENTS_587x900_Cypher.png">
                     </div>
 
-                </div>
             </section>
 
             <section class="download-bg">
