Ajustes de Esboco completo HTML e CSS

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
                 </div>
 
             </div>
-
+                <div class="header-valorant">
+                <img src="images/-41603133698zip8pbgjls-removebg-preview.png">
+                </div>
         </header>
+
 
         <main class="main">
             <section class="agents-bg">
@@ -158,20 +161,21 @@
                 </section>
             
 
-                <section class="suport-bg">
+                <section class="suport">
                     <div class="suport-container">
-                        <h2 class="suport-title">Suporte</h2>
-                        <form class="suport-form">
-                            <input type="text" class="name" placeholder="Nome">
-                            <input type="text" class="sobreName" placeholder="Sobrenome"><br>
-                            <input type="email" class="email" placeholder="E-mail">
-                            <input type="text" class="nick" placeholder="Apelido de Jogador"><br>
-                            <input type="text" class="subject" placeholder="Assunto"><br>
-                            <input type="text" class="description" placeholder="Descricao">
-                        </form>
-                    
-                        <div>
-                            <button type="submit" class="btn">Enviar</button> 
+                        <div class="suport-bg">
+                            <h2 class="suport-title">Suporte</h2>
+                            <form class="suport-form">
+                                <input type="text" class="name" placeholder="Nome">
+                                <input type="text" class="sobreName" placeholder="Sobrenome"><br>
+                                <input type="email" class="email" placeholder="E-mail">
+                                <input type="text" class="nick" placeholder="Apelido de Jogador"><br>
+                                <input type="text" class="subject" placeholder="Assunto"><br>
+                                <textarea rows = "5" cols = "50" class="description" placeholder="Descricao"></textarea>
+                            </form>
+                            <div>
+                                <button type="submit" class="btn btn-form">Enviar</button> 
+                            </div>
                         </div>
                     </div>
                 </section>
