Ajuste Backgrounds Header e Agents

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div>
                     <nav class="header-nav">
                         <ul>
-                            <li>Agentes</li>
-                            <li>Mapas</li>
-                            <li>Arsenal</li>
-                            <li>Download</li>
-                            <li>Suporte</li>
+                            <li><a href="agentes.html">Agentes</a></li>
+                            <li><a href="#">Mapas</a></li>
+                            <li><a href="#">Arsenal</a></li>
+                            <li><a href="#">Download</a></li>
+                            <li><a href="#">Suporte</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -53,7 +53,7 @@
             <section class="agents-bg">
                 <div class="agents-container">
                     <div>
-                        <h2 class="tittle">Agentes</h2>
+                        <h2 class="tittle title-agents">Agentes</h2>
                     </div>
                     <div class="agents-cards"> 
                     </div>
@@ -119,8 +119,8 @@
                     <div class="download-container">
                         <div class="download-left">
                             <h2 class="tittle">Baixe o Jogo</h2>
-                            <div>
-                                <div>
+                            <div class="download-reason">
+                                <div class="download-reason-img">
                                     <img src="images/Caminho 250.svg">
                                 </div>
                                 <div>
@@ -128,8 +128,8 @@
                                 </div>
                             </div>
 
-                            <div>
-                                <div>
+                            <div class="download-reason">
+                                <div class="download-reason-img">
                                     <img src="images/Caminho 246.svg">
                                 </div>
                                 <div>
@@ -137,8 +137,8 @@
                                 </div>
                             </div>
 
-                            <div>
-                                <div>
+                            <div class="download-reason">
+                                <div class="download-reason-img">
                                     <img src="images/Caminho 247.svg">
                                 </div>
                                 <div>
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <div>
-                                <button type="button" class="btn" > <img src="images/Caminho 249.svg">Download</button>
+                                <button type="button" class="btn-download"><img class="btn-dowload-img" src="images/Caminho 249.svg">Download</button>
                             </div>
 
                         </div>
