--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
 
         <main class="main">
             <section class="agents-bg">
-                <div class="agents-container">
-                    <div>
-                        <h2 class="tittle title-agents">Agentes</h2>
-                    </div>
-                    <div class="agents-cards"> 
-                    </div>
+                <div id="cardContainer">
+        
                 </div>
             </section>
             <div class="middle-bg">
