--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 
         <main class="main">
             <section class="agents-bg">
-                <div id="cardContainer">
-        
+                <div  class="agents-container">
+                    <div>
+                    <h2 class="tittle title-agents">Agentes</h2>
+                    </div>
+                    <div id="cardContainer"> 
+                    </div>
                 </div>
             </section>
             <div class="middle-bg">
@@ -188,12 +192,11 @@
 
 
 
-        <script>
-        </script>
+       
 
     </body>
 
-
+    <script src="./JS/main.js"></script>
 
 
 
