--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div>
                             <h2 class="tittle">Mapas</h2>
                         </div>
-                        <div class="maps-cards">
+                        <div id="mapsContainer" class="maps-cards">
                         </div>
                     </div>
                 </section>
