--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
         <link href="CSS/mainStyle.css" rel="stylesheet">
-        <script src="JS/main.js"></script>
 
         <script>
         </script>
@@ -47,6 +46,56 @@
                 <img src="images/-41603133698zip8pbgjls-removebg-preview.png">
                 </div>
         </header>
+
+
+        <div class="modal-back">
+            <div class="modal-container01">
+                <div class="modal-left">
+                    <h3>Função</h3>
+                    <h1 id="field-function"></h1>
+                    <p id="field-description" class="description-p"></p>
+                    <h3 class="habilidade-tittle">Habilidades</h3>
+                    <div class="modal-habilidades">
+                        <div class="habilidade">
+                            <div class="arma-primaria">
+                                <p>Arma Primaria</p>
+                            </div>
+                            <div class="dmg-arma-primaria">
+                                <p id="primary-dmg-field"class="dmg-p"></p>
+                            </div>
+                        </div>
+                        <div class="habilidade">
+                            <div class="arma-secundaria">
+                                <p>Arma secundaria</p>
+                            </div>
+                            <div class="dmg-arma-secundaria">
+                                <p id="secondary-dmg-field" class="dmg-p"></p>
+                            </div>
+                        </div>
+                        <div class='habilidade'>
+                            <div class="arma-branca">
+                                <p>Arma branca</p>
+                            </div>
+                            <div class="dmg-arma-branca">
+                                <p id="melee-dmg-field" class="dmg-p"></p>
+                            </div>
+                        </div>
+                        <div class="habilidade">
+                            <div class="especial">
+                                <p>Especial</p>
+                            </div>
+                            <div class="dmg-arma-branca">
+                                <p id="special-dmg-field" class="dmg-p"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-right">
+                    <img id="agent-img-element"src="./agents/not-available.png">
+                </div>
+                <span class="modal-close">X</p>
+            </div>
+        </div>
 
 
         <main class="main">
