--- a/agentes.html
+++ b/agentes.html
@@ -100,22 +100,59 @@
     </div>
 
     <div class="modal-newAgent">
-        <div class="modal-container01">
-
-            <div class="newAgent-content">
-
-                <div class="grid-col" style="background-color: blue;"></div>
-                <div class="grid-col" style="background-color: red;"></div>
-                <div class="grid-col" style="background-color: green;"></div>
-            </div>
-            <span class="modal-newAgent-close">X</p>
+        <div class="modal-container-newAgent">
+                <div>
+                    <p class="tittle-newAgente">Adicionar Agente</p>
+                </div>
+                <div class="function">
+                    <input type="text" placeholder="Função">
+                </div>
+                <div class="hab-1">
+                    <input type="text" placeholder="Habilidade-1">
+                </div>
+                <div class="hab-2">
+                    <input type="text" placeholder="Habilidade-2">
+                </div>
+                <div class="hab-3">
+                    <input type="text" placeholder="Habilidade-3">
+                </div>
+                <div class="hab-4">
+                    <input type="text" placeholder="Habilidade-4">
+                </div>
+                <div class="description">
+                    <input type="text" placeholder="Descricao">
+                </div>
+                <div class="dmg-1">
+                    <input type="text" placeholder="Dano 1">
+                </div>
+                <div class="dmg-2">
+                    <input type="text" placeholder="Dano 2">
+                </div>
+                <div class="dmg-3">
+                    <input type="text" placeholder="Dano 3">
+                </div>
+                <div class="dmg-4">
+                    <input type="text" placeholder="Dano 4">
+                </div>
+                <div class="img">
+                    <div class="img-add">
+                    <img  src="images/Caminho 261.png" alt="ladrao de caminhao pendurado pela janela">
+                    </div>
+                    <div>
+                        <h4>Foto</h4>
+                    </div>
+                </div>
+                <div class="btn-container">
+                    <div>
+                        <button class="btn1" type="submit">Cancelar</button>
+                    </div>
+                    <div>
+                        <button class="btn2" type="submit">Salvar</button>
+                    </div>
+                </div>
+                <span class="modal-newAgent-close">X</p>
         </div>
     </div>
-
-
-
-
-
 
 
     <main>
