--- a/agentes.html
+++ b/agentes.html
@@ -114,7 +114,7 @@
                     </select>
                 </div>
                 <div class="hab-1">
-                    <input type="text" placeholder="Habilidade-1">
+                    <label>Arma Primaria</label>
                 </div>
                 <div class="hab-2">
                     <input type="text" placeholder="Habilidade-2">
