--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class="weapons-container">
+                    <div id="gunsContainerElement" class="weapons-container">
                         <div class="weapons-left">
                             <h4 class="weapon-tittle">Arma primaria</h4>
                             <div class="weapons-card">
@@ -156,7 +156,6 @@
                                 <img class="arrow-right" src="images/Caminho 256.svg">
                             </div>
                         </div>
-                    
 
                         <div class="weapons-right">
                             <img src="images/V_AGENTS_587x900_Cypher.png">
